# robotname

install/: local_setup.sh  (+1 more)
robotname_autonomy/: CMakeLists.txt  package.xml
robotname_autonomy/bt_projects/: Project.btproj
robotname_autonomy/bt_xml/: cobaobjects.xml  findobject.xml  newapi.xml  robotmove.xml
robotname_autonomy/include/robotname_autonomy/: find_object.hpp  go_to_pose.hpp  utils.hpp
robotname_autonomy/include/robotname_autonomy/plugins/: amcl_update.hpp  ball_available.hpp  ball_grabbed.hpp  find_nearest_ball.hpp  flush_intake.hpp  follow_path.hpp  get_ball_grabbed_top.hpp  get_intake_color copy.hpp  get_intake_color.hpp  get_intake_distance.hpp  get_intake_proximity_array.hpp  get_nearest_ball.hpp  go_through_poses.hpp  go_to_pose.hpp  nav_to_pose.hpp  rotate.hpp  set_intake_mechanism.hpp  set_locations.hpp  set_speed.hpp
robotname_autonomy/launch/: server.launch.py
robotname_autonomy/scripts/: numpad_client_node.py  numpad_node.py
robotname_autonomy/src/: auto2.cpp  autonomy_node.cpp  find_object.cpp  follow_node.cpp  go_to_pose.cpp  set_speed.cpp
robotname_autonomy/src/action_server/: find_nearest_ball_server.cpp  flush_intake_server.cpp  follow_ball_server.cpp  get_ball_grabbed_server.cpp  get_ball_grabbed_top_server.cpp  get_intake_color_server.cpp  get_intake_proximity_array_server.cpp  move_with_lidar_reference.cpp  rotate_speed_server.cpp  set_speed_server.cpp  setup_menu_server.cpp  wait_button_server.cpp
robotname_autonomy/src/plugins/: amcl_update.cpp  ball_available.cpp  ball_grabbed.cpp  find_nearest_ball.cpp  find_object.cpp  flush_intake.cpp  follow_ball.cpp  follow_path.cpp  get_ball_grabbed.cpp  get_ball_grabbed_top.cpp  get_current_pose.cpp  get_intake_color copy.cpp  get_intake_color.cpp  get_intake_distance.cpp  get_intake_proximity_array.cpp  get_nearest_ball.cpp  go_through_poses.cpp  go_to_pose.cpp  grab_nearest_ball.cpp  id_found.cpp  intake_color.cpp  nav_through_poses.cpp  nav_to_pose.cpp  reset_ball_grabbed.cpp  rotate.cpp  set_intake_mechanism.cpp  set_locations.cpp  set_speed.cpp
robotname_autonomy/src/plugins/action/: find_nearest_ball.cpp  flush_intake.cpp  follow_ball.cpp  get_ball_grabbed.cpp  get_ball_grabbed_top.cpp  get_intake_color.cpp  get_intake_proximity_array.cpp  move_with_lidar_reference.cpp  nav_through_poses.cpp  nav_to_pose.cpp  rotate_speed.cpp  set_speed.cpp  setup_menu.cpp  wait_button.cpp
robotname_autonomy/src/server/: ball_available_server.cpp  ball_grabbed_server.cpp  find_nearest_ball_server.cpp  follow_path_server.cpp  get_best_silo_server.cpp  get_current_pose_server.cpp  get_intake_color_server.cpp  get_intake_distance_server.cpp  reset_ball_grabbed_server.cpp  rotate_server.cpp  set_intake_mechanism_server.cpp  set_pneumatic_server.cpp  set_speed_server.cpp  set_tail_position_server.cpp
robotname_hardware/: CMakeLists.txt  package.xml
robotname_hardware/include/robotname_hardware/: polar_type.h  robot_node.hpp  udp.hpp  xytheta.h
robotname_hardware/src/: ball_counter.cpp  ball_counter_color.cpp  ball_grabbed.cpp  base_node.cpp  global_position.cpp  joy_node.cpp  position_node.cpp  robot_node.cpp  udp.cpp
robotname_localization/: CMakeLists.txt  package.xml
robotname_localization/config/: ekf.yaml  ekf_sim.yaml  lidarkanan.yaml  lidarkiri.yaml  lidarmerger.yaml  lidarserial.yaml  lidarserial2.yaml  online_async_slam.yaml
robotname_localization/launch/: ekf.launch.py  lidar.launch.py  online_async_slam.launch.py  robotname_localization.launch.py  rtabmapslam.launch.py  rtabodom.launch.py
robotname_localization/src/: filterlidar.cpp  lidarreference.cpp
robotname_msgs/: CMakeLists.txt  package.xml
robotname_msgs/action/: FindNearestBall.action  FlushIntake.action  Follow.action  GetBallGrabbed.action  GetIntakeColor.action  GetIntakeProximityArray.action  MoveWithLidarReference.action  Navigate.action  NavigateToPose.action  SetSpeed.action  SetSpeedServer.action  SetupMenu.action  WaitButton.action
robotname_msgs/msg/: DetectSilo.msg  DetectSiloArray.msg  Detection.msg  DetectionArray.msg  InGameData.msg  MenuList.msg
robotname_msgs/srv/: BallAvailable.srv  BallGrabbed.srv  FindNearestBall.srv  GetBestSilo.srv  GetCurrentPose.srv  GetIntakeDistance.srv  MenuRequest.srv  Rotate.srv  SetIntakeMechanism.srv  SetPneumatic.srv  SetSpeed.srv  SetTailPosition.srv
robotname_navigation/: CMakeLists.txt  package.xml
robotname_navigation/config/: follow.xml  mpc.yaml  nav2_params.yaml  nav2_params_retry.yaml  nav2_params_sim.yaml  navigate_through_pose.xml  navigate_to_pose.xml
robotname_navigation/include/robotname_navigation/: visibility_control.h
robotname_navigation/launch/: localization.launch.py  navigation.launch.py
robotname_navigation/maps/: mapku1.data  mapku1.pgm  mapku1.yaml  mapku2 (copy).pgm  mapku2.pgm  mapku2.yaml  mapku2_mask.pgm  mapku2_mask.yaml  mapku3.data  mapku3.pgm  mapku3.yaml  mapku3regional.pgm  mapku4.data  mapku4.pgm  mapku4.yaml  mapkuh.pgm  mapkuh.yaml
robotname_navigation/src/: pid.cpp  pidcontroller.cpp  simpleplanner.cpp  straightLinePlanner.cpp  straightlineclient.cpp
robotname_navigation/src/plugin/: straightlineplanner.cpp
robotname_perception/: CMakeLists copy.txt  CMakeLists.txt  package.xml
robotname_perception/config/: ball.names  intakecam_params.yaml  intakeprocess_params.yaml  omni_params.yaml  realsense.json  realsense2.json  silo_camera.yaml  top_params.yaml
robotname_perception/include/robotname_perception/: yolo_onnx.hpp  yolo_openvino.hpp
robotname_perception/launch/: coba_depan_depth.launch.py  coba_silo.launch.py  coba_silo_depth.launch.py  composition.launch.py  intake.launch.py  rs_dual.launch.py  sim_composition.launch.py
robotname_perception/scripts/: TrackingDecoder.py  ball_detection.py  global_position.py  intakeprocess.py  omni_ball_detection.py  slowdown.py  topprocess.py  tracking_component.py
robotname_perception/src/: blob_component.cpp  ocam_node.cpp  omni_node.cpp  transform_component.cpp  visualize_component.cpp  yolo_detector_component.cpp  yolo_onnx_component.cpp  yolo_openvino.cpp
(+111 files in other folders)
